@@ -257,6 +257,35 @@ then
 
 
 
+elif [ "$1" = "devconfig" ]
+then
+	echo ""
+	echo "Configuring for quick and dynamic compilation"
+	echo ""
+
+	echo "Preparing compilation..."
+	export CPPFLAGS="-I$LIBDIR/include"
+	export LDFLAGS="-L$LIBDIR/lib"
+
+	echo "Creating autoconf script"
+	autoreconf -fi || exit 1
+
+	#try building
+	echo "Configuring (not enabling static or preparing for installer)"
+	if ! ( ./configure --enable-w32console )
+	then
+		echo ""
+		echo "ERROR!"
+		echo ""
+		exit 1
+	fi
+
+	echo "Okay, now you can compile by typing \"make\""
+	echo "Note: the exe can only run inside mingw/msys, not windows!"
+	echo "(type \"src/recaged\" or \"./recaged\" to run it)"
+
+
+
 elif [ "$1" = "crossinstaller" ]
 then
 	echo ""
@@ -271,6 +300,7 @@ else
 	echo "	installer	- compile and create w32 installer"
 	echo "	dependencies	- install everything needed for compiling+packing (+vim)"
 	echo "	update		- update everything (will delete \"$LIBDIR\")"
+	echo "	devconfig	- configure compilation and running from mingw/msys only, no static or installer"
 	#echo "	crossinstaller	- cross-compile w32 installer"
 	#echo "	crossdependencies	- cross-compile libraries for w32"
 	echo "(see README for more details)"
